src/test/deca/context/invalid/mauvais_test_context_appel_main.deca
// Description :
// Même chose que test_context_incorrect_5.deca: sauf qu'on appelle la méthode M avec un paramètre non erroné qui est un champ de la classe B.
//
// Résultats :
// Erreur contextuelle
// ligne 33: (règle 3.74)

class A {
	void M() {
	}
}
{
	M();
}